bitflip_program/tests/snapshots/token_initialize_test__shared_token_initialize_test@bit-2.snap
---
source: bitflip_program/tests/token_initialize_test.rs
expression: parsed_treasury_member_token_account
snapshot_kind: text
---
{
  "type": "account",
  "info": {
    "mint": "[mint:pubkey]",
    "owner": "[treasury:pubkey]",
    "tokenAmount": {
      "uiAmount": 1073741824.0,
      "decimals": 0,
      "amount": "1073741824",
      "uiAmountString": "1073741824"
    },
    "state": "initialized",
    "isNative": false,
    "extensions": [
      {
        "extension": "immutableOwner"
      }
    ]
  }
}
