bitflip_program/tests/snapshots/token_initialize_test__shared_token_initialize_test@mebibit.snap
---
source: bitflip_program/tests/token_initialize_test.rs
expression: mint_account
snapshot_kind: text
---
{
  "type": "mint",
  "info": {
    "mintAuthority": "[treasury:pubkey]",
    "supply": "0",
    "decimals": 0,
    "isInitialized": true,
    "freezeAuthority": "[treasury:pubkey]",
    "extensions": [
      {
        "extension": "metadataPointer",
        "state": {
          "authority": "[treasury:pubkey]",
          "metadataAddress": "[mint:pubkey]"
        }
      },
      {
        "extension": "mintCloseAuthority",
        "state": {
          "closeAuthority": "[treasury:pubkey]"
        }
      },
      {
        "extension": "groupMemberPointer",
        "state": {
          "authority": "[treasury:pubkey]",
          "memberAddress": "[mint:pubkey]"
        }
      },
      {
        "extension": "tokenMetadata",
        "state": {
          "updateAuthority": "[treasury:pubkey]",
          "mint": "[mint:pubkey]",
          "name": "MebiBit",
          "symbol": "MiB",
          "uri": "https://bitflip.art/mbit-meta.json",
          "additionalMetadata": []
        }
      }
    ]
  }
}
