bitflip_program/tests/snapshots/token_initialize_test__token_initialize_test_validator@mebibit.snap
---
source: bitflip_program/tests/token_initialize_test.rs
expression: "format!(\"{rounded_compute_units} CU\")"
snapshot_kind: text
---
80000 CU
